--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  
+  --font-ubuntu: Ubuntu, Roboto, 'sans-serif', 'Helvetica', 'Arial';
 }
 
 @theme inline {
@@ -14,13 +16,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #f9f9f9;
+    --foreground: #8881fb;   
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:  var(--font-ubuntu), sans-serif;
 }
